# go-and-rust

./: Cargo.toml  README.md  justfile  main.go
src/: lib.rs
